--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/JustJoshin12/Olive-Garden-Alcohol-Policy-Agreement",
+  "homepage": "https://justjoshin12.github.io/Olive-Garden-Alcohol-Policy-Agreement/",
   "name": "alcohol",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d public"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
