--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
