--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://justjoshin12.github.io",
+  "homepage": "https://justjoshin12.github.io/Olive-Garden-Alcohol-Policy-Agreement",
   "name": "alcohol",
   "version": "0.1.0",
   "private": true,
